// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLabel 镜像测试 不可用状态 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxjAm hTUda-d sinoui-switch__label"
=======
  className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 cyvRbu sinoui-switch__label"
>>>>>>> origin/bottomNavigation
  data-testid="switchLabel"
  disabled={true}
>
  <input
    className="sinoui-switch__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;

exports[`SwitchLabel 镜像测试 渲染SwitchLabel 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxjAm fmOMyp sinoui-switch__label"
=======
  className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 gGAMdi sinoui-switch__label"
>>>>>>> origin/bottomNavigation
  data-testid="switchLabel"
>
  <input
    className="sinoui-switch__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;

exports[`SwitchLabel 镜像测试 选中状态 1`] = `
<span
  checked={true}
<<<<<<< HEAD
  className="sc-AxjAm XgvBg sinoui-switch__label"
=======
  className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 gZpuOZ sinoui-switch__label"
>>>>>>> origin/bottomNavigation
  color="info"
  data-testid="switchLabel"
>
  <input
    checked={true}
    className="sinoui-switch__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;
